# codehawk

./: .gitignore  IMPLEMENTATION.md  LICENSE  README.md  RELEASE.md  STATUS.md  pyproject.toml  requirements-dev.txt  requirements.txt
codehawk/: __init__.py  cli.py  config.py
codehawk/api/: __init__.py
codehawk/chunker/: __init__.py  code_chunker.py
codehawk/context/: __init__.py  engine.py
codehawk/database/: __init__.py
codehawk/embeddings/: __init__.py  generator.py
codehawk/graph/: __init__.py
codehawk/lineage/: __init__.py
codehawk/mcp/: __init__.py
codehawk/parser/: __init__.py  tree_sitter_parser.py
codehawk/utils/: __init__.py
examples/: architecture_demo.py  basic_usage.py  quick_demo.py
tests/e2e/: conftest.py  test_context_pack_integration.py  test_repository_overview.py
tests/unit/: test_chunker.py  test_config.py  test_context.py  test_database_search.py  test_embeddings.py  test_graph_analyzer.py  test_lineage_changes.py  test_parser.py
